MOdifiche di stile a profilo e impostazioni Aggiunta stampa prenotazioni per utenti normali

--- a/public/css/style-profile.css
+++ b/public/css/style-profile.css
@@ -3,6 +3,7 @@
     --theme-color: rgba(24, 192, 46, 0.534);
     --btn-prenota-color: rgba(8, 211, 41, 0.603);
     --btn-info-color: rgba(17, 177, 226, 0.534);
+    --btn-disdici-color: rgb(255, 94, 0);
     --header-color: var(--theme-color);
     --footer-color: #efefef;
 }
@@ -51,6 +52,14 @@ a {
 
 .btn-print {
     background-color: var(--btn-info-color);
+}
+
+.btn-confirm {
+    background-color: var(--btn-prenota-color);
+}
+
+.btn-disdici {
+    background-color: var(--btn-disdici-color);
 }
 
 .d-flex {
