--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="text-center">
-                  <button type="submit" class="btn btn-danger" id="btnDeleteAccount">Elimina il mio account</button>
+                  <button type="submit" class="btn btn-remove" id="btnDeleteAccount">Elimina il mio account</button>
                 </div>
               </form>
             </div>
