--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,6 +1,6 @@
 <!-- Footer -->
 <footer class="d-flex flex-wrap border-top">
-  <p class="col-md-4 text-muted px-4">&copy; 2022 EventHub</p>
+  <p class="col-md-4 text-muted px-4 align-content-center">&copy; 2022 EventHub</p>
 
   <a href="/" class="col-md-4 d-flex mb-3 mb-md-0">
     <!-- Aspetto dell'immagine originale: 3.66:1 -->
