--- a/views/partials/main-listing.handlebars
+++ b/views/partials/main-listing.handlebars
@@ -2,20 +2,20 @@
 
   <div class="card-inner">
     <div class="card-front">
-      <div id="titolo" class="display-6 text-center">{{titolo}}</div>
-      <div id="tipo" class="lead mb-2 text-center">Tipo evento: {{tipo}}</div>
+      <div id="titolo">{{titolo}}</div>
+      <div id="tipo">Tipo evento: {{tipo}}</div>
 
-      <div id="dataora" class="lead"><i class="fa-solid fa-calendar-days"></i> {{dataora}}</div>
+      <div id="dataora"><i class="fa-solid fa-calendar-days"></i> {{dataora}}</div>
       {{#if disponibile}}
-      <div id="posti" class="lead"><i class="fa-solid fa-chair"></i> Posti disponibili: {{postidisponibili}}</div>
+      <div id="posti"><i class="fa-solid fa-chair"></i> Posti disponibili: {{postidisponibili}}</div>
       {{/if}}
 
       <!-- Informazioni aggiuntive -->
-      <div id="luogo" class="lead"><i class="fa-solid fa-map-location-dot"></i></div>
-      <div id="organizzatore" class="lead"><i class="fa-solid fa-user-tag"></i></div>
+      <div id="luogo"><i class="fa-solid fa-map-location-dot"></i></div>
+      <div id="organizzatore"><i class="fa-solid fa-user-tag"></i></div>
 
       <hr class="my-1">
-      <p id="desc"><i class="fa-solid fa-align-justify"></i> {{descrizione}}.</p>
+      <p id="desc">{{descrizione}}</p>
     </div>
 
     <div class="card-back">
@@ -23,7 +23,7 @@
       <div class="mt-2 text-danger" id="message"></div>
 
       <!-- Pulsanti -->
-      <div class="lead buttons-par">
+      <div class="buttons-par">
         <a><button id="info" class="btn btn-info btn-lg mb-5 mt-5" onclick="info({{id}})">Informazioni</button></a>
         <br>
         {{#if disponibile}}
