--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -175,7 +175,7 @@
                 </div>
 
                 <div class="text-center py-2 px-3">
-                  <button type="submit" class="btn btn-confirm my-3" id="creaEventoBtn"
+                  <button type="submit" class="btn btn-confirm" id="creaEventoBtn"
                     form="creaEvento">Conferma</button>
 
                   <button type="reset" class="btn btn-secondary" id="resetBtn" form="creaEvento">Reset</button>
