--- a/public/css/style-main.css
+++ b/public/css/style-main.css
@@ -41,12 +41,34 @@ footer {
     left: 0;
 }
 
+div {
+    font-size: 17px;
+    color: black;
+    font-weight: 300;
+}
+
+div#titolo {
+    font-size: 25px;
+    text-align: center;
+    padding-top: .5rem;
+    font-weight: 400;
+}
+
+div#tipo {
+    margin-bottom: .5rem;
+    text-align: center;
+}
+
 a {
     text-decoration: none;
 }
 
 .container {
     max-width: 95%;
+}
+
+footer > p {
+    margin-bottom: 0;
 }
 
 /* Pulsanti */
@@ -61,13 +83,23 @@ a {
 }
 
 .btn-login {
+    background-color: var(--btn-prenota-color);
+    border-color: transparent;
+    color: black;
+}
+
+.btn-login:hover, .btn-login:active, .btn-login:focus {
     background-color: var(--btn-info-color);
     border-color: transparent;
     color: black;
 }
 
-#luogo, #organizzatore {
+div#luogo, div#organizzatore {
     display: none;
+}
+
+div#desc {
+    text-align: justify;
 }
 
 .input-group-text {
@@ -96,7 +128,8 @@ a {
 .card-deck {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-    grid-gap: .5rem;
+    grid-gap: 2.5rem;
+    justify-items: center;
 }
 
 .card {
