--- a/public/css/style-settings.css
+++ b/public/css/style-settings.css
@@ -6,6 +6,7 @@
     --btn-remove-color: rgb(255, 94, 0);
     --header-color: var(--theme-color);
     --footer-color: #efefef;
+    --btn-secondary-color: rgb(95, 98, 100);
 }
 
 .gradient-custom-4 {
@@ -61,8 +62,28 @@ a {
     color: black;
 }
 
+.btn-primary:hover, .btn-primary:active, .btn-primary:focus {
+    background-color: var(--btn-info-color);
+    border-color: transparent;
+    color: black;
+}
+
 .btn-remove {
     background-color: var(--btn-remove-color);
+    margin-top: 1rem;
+}
+
+.btn-remove:hover, .btn-remove:focus, .btn-remove:active {
+    background-color: red;
+    color: white;
+}
+
+.btn-secondary {
+    background-color: var(--btn-secondary-color);
+}
+
+.btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active {
+    background-color: black;
 }
 
 label {
