--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -5,35 +5,7 @@
   <section>
     <div class="container-xl px-4 mt-4">
       <div class="row justify-content-center">
-        <!-- Rimozione account (solo utenti standard) -->
-        {{#if privilegi}}
-        <div class="col-xl-4">
-          <div class="card mb-4">
-            <div class="card-header">Il tuo profilo</div>
-            <div class="card-body">
-              <p>
-                Rimuovi il mio account.<br>
-                Attenzione: continuando il tuo account verrà rimosso dai nostri sistemi e perderai
-                tutte le prenotazioni.<br>
-              </p>
-
-              <!-- Rimuovi l'account -->
-              <form action="/deleteUser" method="GET">
-                <div>
-                  <input type="checkbox" required />
-                  Sono consapevole della perdita di tutti i miei dati
-                </div>
-
-                <div class="text-center">
-                  <button type="submit" class="btn btn-remove" id="btnDeleteAccount">Elimina il mio account</button>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-        {{/if}}
-
-        <!-- Sezione account (dimensioni diverse se utente standard/organizzatore) -->
+        <!-- Sezione account -->
         <div class="col-xl-8">
           <!-- Form -->
           <div class="card mb-4">
@@ -112,12 +84,42 @@
                 <!-- Salva le modifiche -->
                 <div class="text-center">
                   <button class="btn btn-primary" id="btnSubmit" type="submit" hidden>Conferma</button>
-                  <button class="btn btn-secondary" id="btnReset" type="reset" hidden>Cancella</button>
+                  <button class="btn btn-secondary" id="btnReset" type="reset" onclick="disableChanges()"
+                    hidden>Cancella</button>
                 </div>
               </form>
             </div>
           </div>
         </div>
+
+        <!-- Rimozione account (solo utenti standard) -->
+        {{#if privilegi}}
+        <div class="col-xl-8">
+          <div class="card mb-4">
+            <div class="card-header">Il tuo profilo</div>
+            <div class="card-body">
+              <p>
+                Rimuovi il mio account.<br>
+                Attenzione: continuando il tuo account verrà rimosso dai nostri sistemi e perderai
+                tutte le prenotazioni.<br>
+              </p>
+
+              <!-- Rimuovi l'account -->
+              <form action="/deleteUser" method="GET">
+                <div>
+                  <input type="checkbox" required />
+                  Sono consapevole della perdita di tutti i miei dati
+                </div>
+
+                <div class="text-center">
+                  <button type="submit" class="btn btn-remove" id="btnDeleteAccount">Elimina il mio account</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        {{/if}}
+
       </div>
     </div>
   </section>
