--- a/public/css/style-main.css
+++ b/public/css/style-main.css
@@ -2,6 +2,7 @@
 :root {
     --theme-color: rgba(24, 192, 46, 0.534);
     --btn-prenota-color: rgba(8, 211, 41, 0.603);
+    --btn-prenotato-color: rgb(5, 134, 16);
     --btn-info-color: rgba(17, 177, 226, 0.534);
     --header-color: var(--theme-color);
     --footer-color: #efefef;
@@ -72,14 +73,27 @@ footer > p {
 }
 
 /* Pulsanti */
+.buttons-par {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+    display: none;
+}
+
 .btn-prenota {
     background-color: var(--btn-prenota-color);
     color: black;
 }
 
-.btn-info {
+.btn-prenota:hover, .btn-prenota:focus, .btn-prenota:active {
     background-color: var(--btn-info-color);
-    color: black;
+}
+
+.btn-prenotato {
+    background-color: var(--btn-prenotato-color);
+    color: white;
 }
 
 .btn-login {
@@ -92,10 +106,6 @@ footer > p {
     background-color: var(--btn-info-color);
     border-color: transparent;
     color: black;
-}
-
-div#luogo, div#organizzatore {
-    display: none;
 }
 
 div#desc {
@@ -137,30 +147,15 @@ div#desc {
     display: inline-block;
     width: 400px;
     height: 300px;
-    perspective: 1000px;
 }
 
 .card-inner {
     width: 100%;
     height: 100%;
-    transition: 0.6s;
-    transform-style: preserve-3d;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-.card-front, .card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
     padding-left: 1rem;
     padding-right: 1rem;
-}
-
-.card-back {
-    transform: rotateY(180deg);
-    text-align: center;
+    position: absolute;
 }
 
 /* Media queries per l'adattamento a dispositivi mobili */
