--- a/public/css/style-print.css
+++ b/public/css/style-print.css
@@ -4,7 +4,7 @@
 
 /* Generali */
 body {
-    background-image: url("/img/logo_print.png");
+    background-image: url("/img/logo_95.png");
 }
 
 div {
