--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -155,7 +155,7 @@
               <div class="col-xl-8">
                 <label for="descrizione">Descrizione</label>
                 <br>
-                <textarea rows="5" cols="100" class="form-control" form="creaEvento" name="descrizione"
+                <textarea rows="5" cols="100" class="form-control" form="creaEvento" name="descrizione" maxlength="115"
                   placeholder="Descrizione dell'evento" required></textarea>
               </div>
 
