--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,6 +1,6 @@
 <!-- Body della pagina di login -->
 <section>
-  <div class="mask d-flex gradient-custom-4">
+  <div class="mask d-flex">
     <div class="container">
       <div class="row d-flex">
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
