--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
 <section>
-  <div class="mask d-flex gradient-custom-4">
+  <div class="mask d-flex">
     <div class="container">
       <div class="row d-flex">
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
@@ -18,18 +18,18 @@
                 <hr>
 
                 <!-- Nome e cognome -->
-                <div class="row">
-                  <div class="form-outline mb-3 col col-xs-6">
+                <div class="row mb-3">
+                  <div class="form-outline col col-xs-6">
                     <label for="nome">Nome</label>
                     <input type="text" class="form-control" name="nome" placeholder="Nome" required />
                   </div>
-                  <div class="form-outline mb-3 col col-xs-6">
+                  <div class="col col-xs-6">
                     <label for="cognome">Cognome</label>
                     <input type="text" class="form-control" name="cognome" placeholder="Cognome" required />
                   </div>
                 </div>
 
-                <div class="row mb-3" id="datasesso">
+                <div class="row mb-3">
                   <!-- Data di nascita -->
                   <div class="col col-xs-6">
                     <label for="data">Data di nascita</label>
