--- a/public/css/style-signin.css
+++ b/public/css/style-signin.css
@@ -3,8 +3,12 @@
     --theme-color: rgba(24, 192, 46, 0.534);
 }
 
-.gradient-custom-4 {
-    background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1))
+body {
+    background: linear-gradient(
+        to right, 
+        rgba(132, 250, 175, 0.5), 
+        rgba(143, 211, 244, 0.5)),
+        url("/img/logo_80.png");
 }
 
 /* Generali */
@@ -13,7 +17,7 @@ img {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: auto;
-    width: 60%;
+    width: auto;
 }
 
 .input-group-text {
@@ -45,12 +49,6 @@ img {
 }
 
 /* Media queries per l'adattamento a dispositivi mobili */
-@media screen and (max-width: 600px) {
-    img {
-        width: auto;
-    }
-}
-
 @media screen and (min-height: 460px) {
     section {
         height: 100vh;
