--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -16,7 +16,7 @@
       </ul>
 
       <!-- Barra di ricerca -->
-      <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+      <div class="mb-lg-0 me-3">
         <div class="input-group">
           <input id="src" type="search" onchange="search()" class="form-control" placeholder="Cerca evento..."/>
           <div class="input-group-text"><i class="fa fa-search"></i></div>
