--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -9,7 +9,7 @@
         <div class="col-xl-8">
           <!-- Form -->
           <div class="card mb-4">
-            <div class="card-header d-flex justify-content-between">
+            <div class="card-header d-flex">
               Il tuo account
               <button class="btn btn-primary" onclick="enableChanges()" id="btnModifica">Modifica</button>
             </div>
