--- a/public/css/style-signin.css
+++ b/public/css/style-signin.css
@@ -1,6 +1,7 @@
 /* Colori */
 :root {
     --theme-color: rgba(24, 192, 46, 0.534);
+    --font-family: "Lato", "Inter", sans-serif;
 }
 
 body {
@@ -9,6 +10,7 @@ body {
         rgba(132, 250, 175, 0.5), 
         rgba(143, 211, 244, 0.5)),
         url("/img/logo_80.png");
+    font-family: var(--font-family);
 }
 
 /* Generali */
@@ -17,7 +19,7 @@ img {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: auto;
-    width: auto;
+    width: 250px;
 }
 
 .input-group-text {
@@ -46,6 +48,10 @@ img {
 .d-flex {
     align-items: center;
     justify-content: center;
+}
+
+.fa-eye, .fa-eye-slash {
+    cursor: pointer;
 }
 
 /* Media queries per l'adattamento a dispositivi mobili */
