--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -80,7 +80,7 @@
                 <!-- Termini e condizioni -->
                 <div class="form-outline mb-3">
                   <label class="checkbox-inline"><input type="checkbox" required />
-                    Accetto i <a href="#">Termini d'uso e condizioni</a>
+                    Accetto i termini d'uso e condizioni
                   </label>
                 </div>
 
