--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -11,7 +11,7 @@
               <form action="/loginValid" method="post" class="form-signin">
                 <a href="/">
                   <!-- Aspetto dell'immagine originale: 3.66:1 -->
-                  <img src="img/icon-transparent.png" alt="home" width="250" height="68"/>
+                  <img src="img/icon-transparent.png" alt="home"/>
                 </a>
 
                 <div> Inserisci i dati per accedere al tuo account!</div>
@@ -33,7 +33,7 @@
                 </div>
 
                 <!-- Messaggio di errore -->
-                <div class="form-outline mb-4 text-danger" id='message'>{{error}}</div>
+                <div class="form-outline mb-4 text-danger" id="message">{{error}}</div>
 
                 <!-- Bottone di conferma -->
                 <div class="text-center form-outline">
