--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -6,7 +6,7 @@
     <div class="container-xl px-4 mt-4">
       <div class="row justify-content-center">
         <!-- Sezione account -->
-        <div class="col-xl-8">
+        <div class="col-md-8 col-sm-12">
           <!-- Form -->
           <div class="card mb-4">
             <div class="card-header d-flex">
