--- a/public/css/style-profile.css
+++ b/public/css/style-profile.css
@@ -1,17 +1,4 @@
-/* Colori */
-:root {
-    --theme-color: rgba(24, 192, 46, 0.534);
-    --btn-prenota-color: rgba(8, 211, 41, 0.603);
-    --btn-info-color: rgba(17, 177, 226, 0.534);
-    --btn-disdici-color: rgb(255, 94, 0);
-    --header-color: var(--theme-color);
-    --footer-color: #efefef;
-    --font-family: "Lato", "Inter", sans-serif;
-}
-
-.gradient-custom-4 {
-    background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1))
-}
+@import "style-common.css";
 
 /* Generali */
 html {
@@ -26,32 +13,15 @@ body {
     font-family: var(--font-family);
 }
 
-header {
-    background-color: var(--header-color);
-    margin-left: auto;
-    padding: 1rem;
-    margin-bottom: 1rem;
+.nav-item {
+    cursor: pointer;
 }
 
-footer {
-    background-color: var(--footer-color);
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    width: 100%;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
+table {
+    line-height: 200%;
 }
 
-.input-group-text {
-    background-color: white;
-}
-
-a {
-    text-decoration: none;
-}
-
+/* Pulsanti */
 .btn-print {
     background-color: var(--btn-info-color);
 }
@@ -78,33 +48,10 @@ a {
     color: white;
 }
 
-.d-flex {
-    align-items: center;
-    justify-content: center;
-}
-
-.nav-item {
-    cursor: pointer;
-}
-
-table {
-    line-height: 200%;
-}
-
 /* Media queries per l'adattamento a dispositivi mobili */
-@media screen and (max-width: 600px) {
-    footer {
-        bottom: auto;
-        display: flex;
-        flex-direction: column;
-    }
-  
-    footer p {
-        margin-bottom: 1;
-    }
-  
+@media screen and (max-width: 621px) {  
     section {
-        min-height: 70vh;
+        min-height: 75vh;
     }
 
     .btn {
