--- a/public/css/style-signin.css
+++ b/public/css/style-signin.css
@@ -11,6 +11,7 @@ body {
         rgba(143, 211, 244, 0.5)),
         url("/img/logo_80.png");
     font-family: var(--font-family);
+    background-repeat: space;
 }
 
 /* Generali */
