--- a/public/css/style-signup.css
+++ b/public/css/style-signup.css
@@ -12,6 +12,7 @@ body {
         rgba(143, 211, 244, 0.5)),
         url("/img/logo_80.png");
     font-family: var(--font-family);
+    background-repeat: space;
 }
 
 img {
