--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -9,14 +9,14 @@
       </a>
 
       <!-- Navbar -->
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+      <ul class="nav col-12 col-lg-auto me-lg-auto justify-content-center mb-md-0">
         <li><a href="/highlights" class="nav-link px-2 link-dark">Highlights</a></li>
         <li><a href="/next" class="nav-link px-2 link-dark">Prossimamente</a></li>
         <li><a href="/passed" class="nav-link px-2 link-dark">Eventi conclusi</a></li>
       </ul>
 
       <!-- Barra di ricerca -->
-      <div class="mb-lg-0 me-3">
+      <div class="me-3">
         <div class="input-group">
           <input id="src" type="search" onchange="search()" class="form-control" placeholder="Cerca evento..."/>
           <div class="input-group-text"><i class="fa fa-search"></i></div>
