--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -11,8 +11,7 @@
 
       <ul class="nav col-md-4 justify-content-end px-4">
         <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQ</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contatti</a></li>
+        <li class="nav-item"><a href="/faq" class="nav-link px-2 text-muted">FAQ</a></li>
       </ul>
     </div>
   </div>
