--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -5,7 +5,7 @@
       <!-- Logo -->
       <a href="/" class="me-3">
         <!-- Aspetto dell'immagine originale: 3.66:1 -->
-        <img src="img/icon-transparent.png" alt="home" width="120" height="33" />
+        <img src="/img/icon-transparent.png" alt="home" width="120" height="33" />
       </a>
 
       <!-- Navbar -->
