Correzioni sulla paginazione in tutte le pagine Link al logo nel footer aggiornato con path assoluto

--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -6,7 +6,7 @@
 
       <a href="/" class="col-md-4 d-flex mb-md-0">
         <!-- Aspetto dell'immagine originale: 3.66:1 -->
-        <img src="img/icon-transparent.png" alt="home" width="150" height="41" />
+        <img src="/img/icon-transparent.png" alt="home" width="150" height="41" />
       </a>
 
       <ul class="nav col-md-4 justify-content-end px-4">
