--- a/views/print.handlebars
+++ b/views/print.handlebars
@@ -22,7 +22,7 @@
     <!-- Aspetto dell'immagine originale: 3.66:1 -->
     <div class="text-center">
         <a href="/">
-            <img src="img/icon-transparent.png" alt="home" width="360" height="98" />
+            <img src="/img/icon-transparent.png" alt="home" width="360" height="98" />
         </a>
     </div>
 
