Design responsive del logo in pagina Login Correzioni generali Rimozione file non necessari di bootstrap

--- a/public/css/style-common.css
+++ b/public/css/style-common.css
@@ -54,6 +54,10 @@ header {
     color: black;
 }
 
+.dropdown-item:active {
+    background-color: var(--btn-info-color);
+}
+
 /* Stili del footer */
 footer {
     background-color: var(--footer-color);
