Ristrutturazione del db

--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -11,7 +11,7 @@
               <form action="/loginValid" method="post" class="form-signin">
                 <a href="/">
                   <!-- Aspetto dell'immagine originale: 3.66:1 -->
-                  <img src="img/icon-transparent.png" alt="home"/>
+                  <img src="/img/icon-transparent.png" alt="home"/>
                 </a>
 
                 <div> Inserisci i dati per accedere al tuo account!</div>
@@ -42,7 +42,7 @@
               </form>
 
               <!-- Link di navigazione -->
-              <div class="text-center">Non hai un account? <a href="signup">Registrati</a></div>
+              <div class="text-center">Non hai un account? <a href="/signup">Registrati</a></div>
 
             </div>
           </div>
