--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -8,7 +8,7 @@
               
               <a href="/" class="text-center">
                 <!-- Aspetto dell'immagine originale: 3.66:1 -->
-                <img src="img/icon-transparent.png" alt="home"/>
+                <img src="/img/icon-transparent.png" alt="home"/>
               </a>
 
               <!-- Form -->
@@ -91,7 +91,7 @@
               </form>
 
               <!-- Link di navigazione -->
-              <div class="text-center">Sei già registrato? <a href="login">Accedi</a></div>
+              <div class="text-center">Sei già registrato? <a href="/login">Accedi</a></div>
               <div class="text-center">Torna alla <a href="/">Home</a></div>
 
             </div>
