Inserito tag <body> mancante

--- a/views/logout.handlebars
+++ b/views/logout.handlebars
@@ -1,8 +1,10 @@
-<div class="text-center">
-    <h1>Logout effettuato con successo!</h1>
-    <h2>Clicca <a href="/">qui</a> 
-    se non vieni reindirizzato alla home page entro 1 secondo</h2>
-    
-    <!-- Redireziona alla home page -->
-    <meta http-equiv="refresh" content="1; url=/"/>
-</div>
+<body>
+    <div class="text-center">
+        <h1>Logout effettuato con successo!</h1>
+        <h2>Clicca <a href="/">qui</a>
+            se non vieni reindirizzato alla home page entro 1 secondo</h2>
+
+        <!-- Redireziona alla home page -->
+        <meta http-equiv="refresh" content="1; url=/" />
+    </div>
+</body>
