Modifiche alla pagina "impostazioni"

--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -94,7 +94,7 @@
 
         <!-- Rimozione account (solo utenti standard) -->
         {{#if privilegi}}
-        <div class="col-xl-8">
+        <div class="col-md-8 col-sm-12">
           <div class="card mb-4">
             <div class="card-header">Il tuo profilo</div>
             <div class="card-body">
